# Api/src/routes/routes-reviews.js
@@ -1,38 +1,154 @@
-//aqui van las rutas get/post/put/delete correspondientes
 const { Router } = require("express");
 const reviewsRoutes = Router();
 
 const getReviews = require("../controllers/review - controllers/getReviews");
 const getReviewById = require("../controllers/review - controllers/getReviewById");
 const postReview = require("../controllers/review - controllers/postReview");
+const deleteReview = require("../controllers/review - controllers/deleteReview");
+const updateReview = require("../controllers/review - controllers/updateReview");
 
+/**
+ * @swagger
+ * /reviews:
+ *   delete:
+ *     summary: Elimina una reseña (lógicamente).
+ *     responses:
+ *       200:
+ *         description: Reseña eliminada con éxito.
+ *       500:
+ *         description: Error interno del servidor.
+ */
+reviewsRoutes.delete("/", deleteReview);
+
+/**
+ * @swagger
+ * /reviews/{id}:
+ *   get:
+ *     summary: Obtiene una reseña por ID.
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         description: ID de la reseña.
+ *         required: true
+ *         schema:
+ *           type: integer
+ *     responses:
+ *       200:
+ *         description: Reseña obtenida con éxito.
+ *       400:
+ *         description: No existe una reseña con el ID proporcionado.
+ */
 reviewsRoutes.get("/:id", async (req, res) => {
-  const id = req.params.id;
+  const { id } = req.params;
   try {
     const reviewById = await getReviewById(id);
     res.status(200).json(reviewById);
   } catch (error) {
-    res.status(400).json({ error: `No existe review con el id: ${id}` });
+    res.status(400).json({ error: `No existe reseña con el ID: ${id}` });
   }
 });
 
+/**
+ * @swagger
+ * /reviews/{id}:
+ *   patch:
+ *     summary: Actualiza una reseña por ID.
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         description: ID de la reseña a actualizar.
+ *         required: true
+ *         schema:
+ *           type: integer
+ *     requestBody:
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               email:
+ *                 type: string
+ *                 description: Nueva dirección de correo electrónico del revisor.
+ *               description:
+ *                 type: string
+ *                 description: Nueva descripción de la reseña.
+ *               rating:
+ *                 type: integer
+ *                 description: Nueva calificación de la reseña.
+ *     responses:
+ *       200:
+ *         description: Reseña actualizada con éxito.
+ *       500:
+ *         description: Error interno del servidor.
+ */
+reviewsRoutes.patch("/:id", async (req, res) => {
+  try {
+    const { id } = req.params;
+    const updatedAttributes = req.body;
+    const updatedReview = await updateReview(id, updatedAttributes);
+    res.status(200).json(updatedReview);
+  } catch (error) {
+    res.status(500).json({ error: error.message });
+  }
+});
+
+/**
+ * @swagger
+ * /reviews:
+ *   get:
+ *     summary: Obtiene la lista de todas las reseñas.
+ *     responses:
+ *       200:
+ *         description: Lista de reseñas obtenida con éxito.
+ *       400:
+ *         description: No hay reseñas para mostrar.
+ */
 reviewsRoutes.get("/", async (req, res) => {
   try {
     const allReviews = await getReviews();
     return res.status(200).json(allReviews);
   } catch (error) {
-    res.status(400).json({ message: "No hay review para mostrar" });
+    res.status(400).json({ message: "No hay reseñas para mostrar" });
   }
 });
 
+/**
+ * @swagger
+ * /reviews:
+ *   post:
+ *     summary: Crea una nueva reseña para un producto.
+ *     parameters:
+ *       - in: query
+ *         name: productId
+ *         description: ID del producto al que se asocia la reseña.
+ *         required: true
+ *         schema:
+ *           type: integer
+ *     requestBody:
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               email:
+ *                 type: string
+ *                 description: Dirección de correo electrónico del revisor.
+ *               description:
+ *                 type: string
+ *                 description: Descripción de la reseña.
+ *               rating:
+ *                 type: integer
+ *                 description: Calificación de la reseña.
+ *     responses:
+ *       201:
+ *         description: Reseña creada con éxito.
+ *       500:
+ *         description: Error interno del servidor.
+ */
 reviewsRoutes.post("/", async (req, res) => {
   try {
     const { productId } = req.query;
     const { email, description, rating } = req.body;
-    console.log("productID", productId);
-    console.log("description", description);
-    console.log("rating", rating);
-    console.log("userEmail", email);
 
     const reviewPost = await postReview(productId, email, description, rating);
 
